--- a/Readme.html
+++ b/Readme.html
@@ -1,1 +1,9 @@
-TODO
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+		<title>Readme &bull; SC4MP Launcher 0.1.0</title>
+	</head>
+    <body>
+        <p>TODO</p>
+    </body>
+</html>
