more useful errors, updating `Readme.html`

--- a/Readme.html
+++ b/Readme.html
@@ -23,7 +23,7 @@
 			<h2>Getting started</h2>
 				<h3>Run the launcher</h3>
 					<p>Run the program titled "SC4MP Launcher" to start the launcher. The main window of the SC4MP Launcher will appear on-screen. </p>
-					<p>This window contains a server browser which displays the servers currently online. Each server has associated statistics. You can sort by any column by clicking on the column header. By default the servers are sorted by rating, which is calculated from the other server statistics.</p>
+					<p>This window contains a server browser which displays the servers currently online. Each server has associated statistics. You can sort by any column by clicking on the column header. By default the servers are sorted by rank, which is calculated from the other server statistics.</p>
 					<p>Each server has a description, URL and address located in the lower-left corner of the server browser.</p>
 					<p>The servers can be filtered by a category or by search terms using the box on the lower-right corner.</p>
 					<p>You can refresh the listings by clicking the "Refresh" button.</p>
