--- a/Readme.html
+++ b/Readme.html
@@ -37,7 +37,7 @@
 				<h3>The loading sequence</h3>
 					<p>Certain servers may prompt you for a password. The loading sequence will be cancelled after five failed password attempts.</p>
 					<img src="resources/readme-password-prompt.png">
-					<p>If the launcher successfully establishes a connection to the server, it will begin downloading the server's plugins and regions. This loading sequence can be cancelled at any time by x-ing out of the window or pressing escape.</p>
+					<p>If the launcher successfully establishes a connection to the server, it will begin downloading the server's plugins and regions. Loading a server for the first time might take a couple of minutes, but subsequent loading will be sped up significantly by the cache. This loading sequence can be cancelled at any time by x-ing out of the window or pressing escape.</p>
 					<img src="resources/readme-server-loader.png">
 					<p>Once the loading sequence is complete, the server monitor will start alongside Simcity 4. This window will stay open until the game exits. It displays the result of the last save push and the ping (ie. response time) of the server. A lower ping means a better connection.</p>
 					<img src="resources/readme-server-monitor.png">
