--- a/Readme.html
+++ b/Readme.html
@@ -17,7 +17,7 @@
 				<h1>SC4MP Launcher</h1>
 				<h4>Readme &bull; Version 0.8.0</h4>		
 				<br>
-				<p>Thank you for installing the SC4MP Launcher! This readme will help you get started with SC4MP. You can start playing Simcity 4 multiplayer in just a few steps.</p>
+				<p>Thank you for installing the SC4MP Launcher! This readme will help you get started with SC4MP. You can start playing SimCity 4 multiplayer in just a few steps.</p>
 				<br>
 			</center>
 			<h2>Getting started</h2>
