Added favicon to readme.

--- a/Readme.html
+++ b/Readme.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
 		<title>Readme &bull; SC4MP Launcher v0.8.0</title>
-		<!--<link rel="stylesheet" href="resources/style.css">-->
+		<link rel="icon" href="resources/icon.png">
 		<style>
 			body {
 				font-family: Arial, Helvetica, sans-serif;
