--- a/Readme.html
+++ b/Readme.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="resources/favicon.ico">
 		<style>
 			body {
-				font-family: Arial, Helvetica, sans-serif;
+				font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 				font-size: 14px;
 				padding: 50px;
 			}
