Style logo in readme.

--- a/Readme.html
+++ b/Readme.html
@@ -9,12 +9,22 @@
 				font-size: 14px;
 				padding: 50px;
 			}
+			.logo {
+				color: white;
+				font-family: Tahoma; 
+				font-weight: 700;
+				text-shadow: 
+					-1px -1px 0 black,  
+					1px -1px 0 black,  
+					-1px  1px 0 black,  
+					1px  1px 0 black;
+			}
 		</style>
 	</head>
     <body>
         <div class="wrapper">
 			<center>
-				<h1>SC4MP Launcher</h1>
+				<h1 class="logo"><span style="color: #ffd74c">SC4</span><span style="color: #d03333;">MP</span> Launcher</h1>
 				<h4>Readme &bull; Version 0.8.0</h4>		
 				<br>
 				<p>Thank you for installing the SC4MP Launcher! This readme will help you get started with SC4MP. You can start playing SimCity 4 multiplayer in just a few steps.</p>
