--- a/Readme.html
+++ b/Readme.html
@@ -4,9 +4,9 @@
 		<title>Readme &bull; SC4MP Launcher v0.8.0</title>
 		<link rel="icon" href="resources/readme-favicon.ico">
 		<link rel="stylesheet" href="resources/readme-styles.css">
-		<nav class="header">
-			<h1 class="logo"><span style="color: #ffd74c">SC4</span><span style="color: #d03333;">MP</span> Launcher</h1>
-			<p class="subtitle">Readme &bull; Version 0.8.0</p>	
+		<nav>
+			<h1><span style="color: #ffd74c">SC4</span><span style="color: #d03333;">MP</span> Launcher</h1>
+			<p>Readme &bull; Version 0.8.0</p>	
 		</nav>
 	</head>
     <body>
