Readme typo fixes.

--- a/Readme.html
+++ b/Readme.html
@@ -38,7 +38,7 @@
 				<p>By default, claims expire after 30 days, but this can vary from server to server. By default, players are also limited to one claim per region, but this is also can vary from server to server.</p>
 				<p>Claims are linked to your automatically-generated, server-specific user id. User id's are stored on your computer locally, in your launch directory. This way you are never required to make an account to play on SC4MP, but you can only access your claims on another machine by migrating your launch directory manually.
 			<h3>Claiming a tile</h3>
-				<p>To claim a tile, start a city and save your game. Ensure that the save push succeeded by monitoring for the result in the server monitor window. By default, you must first establish a city to claim the tile. This way, occupied tiles always appear as established cities with city names in the reigon view.</p>
+				<p>To claim a tile, start a city and save your game. Ensure that the save push succeeded by monitoring for the result in the server monitor window. By default, you must first establish a city to claim the tile. This way, occupied tiles always appear as established cities with city names in the region view.</p>
 				<img src="resources/readme-save-successful.png">
 			<h3>Playing in a claimed city</h3>
 				<p>Once you have claimed your city, you can play in it and save it as usual. As long as you're still connected to the server, your saves will be pushed automatically.</p>
@@ -49,7 +49,7 @@
 				<p>To refresh regions, simply load the region titled "Refresh..."</p>
 				<img src="resources/readme-regions.png">
 				<p>The launcher will then initiate the refresh sequence automatically. Wait for this to complete before loading another region.</p>
-				<p>Refreshing regions will also ovverwrite your own cities, so ensure that your work has been saved to the server before refreshing.</p>
+				<p>Refreshing regions will also overwrite your own cities, so ensure that your work has been saved to the server before refreshing.</p>
 				<!--<img src="resources/readme-refresh.png">-->
 			<h3>Disconnecting</h3>
 				<p>To disconnect from a server, simply exit the game. The server monitor will remain open for a few more seconds, but then the main window will subsequently re-open. You are able to then connect to another server seamlessly, without restarting the launcher.</p>
@@ -63,7 +63,7 @@
 				<p>The settings in this window pertain to the files stored by the launcher on your disk.</p>
 				<img src="resources/readme-storage-settings.png">
 				<p><b>Launch path:</b> when the launcher downloads plugins and regions from a server, it writes to a special sandboxed folder. This prevents the launcher from interfering with your singleplayer plugins and regions. By default the launcher will write to a directory named "_SC4MP" in the "Simcity 4" directory in your documents.</p>
-				<p>If you want the launcher to write its files to another directory, specify it in this field. <b>Do NOT set this path to your base Simcity 4 directory ("Documents\Simcity 4\")!</b> Doing so will overwrite your singleplayer plugins and regions. Your server profiles are also stored in this directory, so you will also have to migrate those files manually if you change this directory. Unless you have a specific reason to do so, its best to not change this field.</p>
+				<p>If you want the launcher to write its files to another directory, specify it in this field. <b>Do NOT set this path to your base Simcity 4 directory ("Documents\Simcity 4")!</b> Doing so will overwrite your singleplayer plugins and regions. Your server profiles are also stored in this directory, so you will also have to migrate those files manually if you change this directory. Unless you have a specific reason to do so, it's best to not change this field.</p>
 				<p><b>Cache size: </b>the launcher keeps a rolling cache of downloaded files in order to optimize loading times. A larger cache will allow for faster loading times on servers you've connected to previously, but will use more disk space. A smaller cache will use less disk space but can lead to longer loading times. Specify your desired cache size in megabytes in the field provided.</p>
 				<p>You can also clear your cache here by clicking the "clear cache" button.</p>
 			<h3>SC4 settings</h3>
